--- a/leaflet_demo/index.html
+++ b/leaflet_demo/index.html
@@ -2,14 +2,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="leaflet.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css">
   <script type="text/javascript" src="leaflet.js"></script>
+
   <script type="text/javascript" src="tabletop.min.js"></script>
   <script type="text/javascript" src="jquery.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="leaflet-search.min.js"></script>
   <link rel="stylesheet" href="leaflet-search.min.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>jQuery UI Slider - Default functionality</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
   <style>
         body {
             padding: 0;
