--- a/index.html
+++ b/index.html
@@ -1,4 +1,136 @@
+<!DOCTYPE html>
 <html>
+<head>
+  
+  <title>ClassMaps</title>
+
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+    <script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/0D1798EF-4385-BB47-ADC0-6C6A29D33330/main.js" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="http://gc.kis.v2.scr.kaspersky-labs.com/03333D92A6C6-0CDA-74BB-5834-FE8971D0/abn/main.css"/><script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+
+    <!-- MAKES THE MAP FULLSCREEN -->
+  <style>
+        body {
+            padding: 0;
+            margin: 0;
+        }
+        html, body, #map {
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+
+  
+</head>
+<body>
+
+<div id='map'></div>
+
+<script>
+  // Adds different layer groups
+  var printers = L.layerGroup();
+  var laundry = L.layerGroup();
+  var color = L.layerGroup();
+  var scanners = L.layerGroup();
+  var library = L.layerGroup();
+  var food = L.layerGroup();
+
+  // Coordinates of printers
+  L.marker([40.3467, -74.6601]).bindPopup('Little Hall Basement Entryway 4').addTo(printers),
+  L.marker([40.347, -74.652]).bindPopup('This is Denver, CO.').addTo(printers),
+  L.marker([40.345, -74.654]).bindPopup('This is Aurora, CO.').addTo(printers),
+  L.marker([40.3475, -74.6526]).bindPopup('This is Golden, CO.').addTo(printers);
+
+  // URLS of maps for different laters (note: need to add attributes)
+  var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+      '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+      'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+    mbUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+    mbUrl2 = 'http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',
+    mbUrl3 = 'http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.jpg',
+    mbUrl4 = 'http://{s}.tile.thunderforest.com/landscape/{z}/{x}/{y}.png',
+    mbUrl5 = 'http://{s}.tile.thunderforest.com/transport/{z}/{x}/{y}.png',
+    mbUrl6 = 'http://{s}.tile.thunderforest.com/outdoors/{z}/{x}/{y}.png',
+    mbUrl7 = 'http://{s}.tile.thunderforest.com/cycle/{z}/{x}/{y}.png',
+    mbUrl8 = 'http://{s}.www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png',
+    mbUrl9 = 'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png';
+
+    // Different layers
+  var regular   = L.tileLayer(mbUrl, {id: 'mapbox.light', attribution: mbAttr}),
+    satellite  = L.tileLayer(mbUrl2, {id: 'mapbox.satellite',   attribution: mbAttr}),
+    watercolor = L.tileLayer(mbUrl3, {id: 'mapbox.watercolor',   attribution: mbAttr}),
+    landscape = L.tileLayer(mbUrl4, {id: 'mapbox.landscape',   attribution: mbAttr}),
+    transport = L.tileLayer(mbUrl5, {id: 'mapbox.transport',   attribution: mbAttr}),
+    outdoors = L.tileLayer(mbUrl6, {id: 'mapbox.outdoors',    attribution:mbAttr}),
+    cycle = L.tileLayer(mbUrl7, {id: 'mapbox.cycle',   attribution: mbAttr}),
+    blackwhite = L.tileLayer(mbUrl8, {id: 'mapbox.blackwhite',   attribution: mbAttr}),
+    standard = L.tileLayer(mbUrl9, {id: 'mapbox.standard',   attribution: mbAttr});
+
+    // Initializes the map
+  var map = L.map('map', {
+    center: [40.346, -74.653],
+    zoom: 16,
+    layers: [regular, printers]
+  });
+
+  // Our different layers
+  var baseLayers = {
+    "Regular": regular,
+    "Satellite": satellite,
+    "Watercolor": watercolor,
+    "Landscape": landscape,
+    "Transport": transport,
+    "Outdoors": outdoors,
+    "Cycle": cycle,
+    "Black-White": blackwhite,
+    "Standard": standard
+  };
+
+  // Our overlays
+  var overlays = {
+    "Printers": printers,
+    "Scanners": scanners,
+    "Color printers": color,
+    "Laundry": laundry,
+    "Food": food,
+    "Libraries": library
+  };
+
+  // Adds overlays and layers to map
+  L.control.layers(baseLayers, overlays).addTo(map);
+
+  // Limits zoom (we could get rid of this)
+  map.options.minZoom = 14;
+  map.options.maxZoom = 18;
+
+  // Displays current user location and accuracy
+  function onLocationFound(e) {
+    var radius = e.accuracy / 2;
+
+    L.marker(e.latlng).addTo(map)
+        .bindPopup("You are within " + radius + " meters from this point").openPopup();
+
+    L.circle(e.latlng, radius).addTo(map);
+}
+map.on('locationfound', onLocationFound);
+
+// Displays coordinates upon mouse click
+var popup = L.popup();
+  function onMapClick(e) {
+    popup
+      .setLatLng(e.latlng)
+      .setContent("You clicked the map at " + e.latlng.toString())
+      .openOn(map);
+  }
+  map.on('click', onMapClick);
+
+  /* OLD CODE (feel free to delete)
+
+  <html>
 <head>
   <title>A Leaflet map!</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
@@ -6,7 +138,7 @@
    crossorigin=""/>
    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-   crossorigin=""></script>
+   crossorigin="">< /script>
   <style>
     #mapid { width: 1000px; height: 600px; }
   </style>
@@ -16,10 +148,8 @@
   <div id="mapid"></div>
 
   <script>
-
   // initialize the map
   var mymap = L.map('mapid').setView([40.346, -74.653], 16);
-
   L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
     maxZoom: 18,
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
@@ -27,23 +157,19 @@
       'Imagery © <a href="http://mapbox.com">Mapbox</a>',
     id: 'mapbox.streets'
   }).addTo(mymap);
-
   L.marker([40.346, -74.653]).addTo(mymap)
     .bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
-
   L.circle([40.3462, -74.652], 5, {
     color: 'red',
     fillColor: '#f03',
     fillOpacity: 0.5
   }).addTo(mymap).bindPopup("I am a circle.");
-
   L.polygon([
     [40.34715, -74.655],
     [40.34667, -74.6546],
     [40.34636, -74.65537],
     [40.3468, -74.6557]
   ]).addTo(mymap).bindPopup("I am a polygon.");
-
   L.polygon([
 [40.349366,-74.650526],
 [40.349334,-74.650642],
@@ -52,7 +178,6 @@
 [40.349564,-74.651221],
 [40.349687,-74.650663]
 ]).addTo(mymap).bindPopup("Andlinger Center for Energy and Environment"); 
-
   L.polygon([
 [40.348657,-74.654009],
 [40.348646,-74.654044],
@@ -71,7 +196,6 @@
 [40.348691,-74.654002],
 [40.348685,-74.654022]
 ]).addTo(mymap).bindPopup("Bendheim Hall"); 
-
   L.polygon([
 [40.348835,-74.649508],
 [40.348788,-74.649486],
@@ -92,7 +216,6 @@
 [40.348900,-74.649423],
 [40.348863,-74.649406]
 ]).addTo(mymap).bindPopup("Bobst Hall"); 
-
   L.polygon([
 [40.349357,-74.650394],
 [40.349394,-74.650408],
@@ -143,17 +266,22 @@
 [40.349438,-74.650088],
 [40.349434,-74.650094]
 ]).addTo(mymap).bindPopup("Bowen Hall");
-
   var popup = L.popup();
-
   function onMapClick(e) {
     popup
       .setLatLng(e.latlng)
       .setContent("You clicked the map at " + e.latlng.toString())
       .openOn(mymap);
   }
-
   mymap.on('click', onMapClick);
+< /script>
+</body>
+</html>
+*/
+
 </script>
+
+
+
 </body>
 </html>
