Added printer locations to map

--- a/index.html
+++ b/index.html
@@ -45,74 +45,74 @@
   L.marker([40.345, -74.654]).bindPopup('This is Aurora, CO.').addTo(printers),
   L.marker([40.3475, -74.6526]).bindPopup('This is Golden, CO.').addTo(printers);
 
-  var hi = [['40.34614', '-74.660091'],
- ['40.345863', '-74.656253'],
- ['40.344532', '-74.655534'],
- ['40.343418', '-74.655867'],
- ['40.347546', '-74.654514'],
- ['40.346659', '-74.653703'],
- ['40.34714524', '-74.65927882'],
- ['40.349123', '-74.651827'],
- ['40.349582', '-74.657495'],
- ['40.342214', '-74.661144'],
- ['40.342214', '-74.661144'],
- ['40.350268', '-74.652827'],
- ['40.350268', '-74.652827'],
- ['40.34673', '-74.655259'],
- ['40.34673', '-74.655259'],
- ['40.34673', '-74.655259'],
- ['40.348599', '-74.661556'],
- ['40.348599', '-74.661556'],
- ['40.34491', '-74.656064'],
- ['40.343615', '-74.658358'],
- ['40.333379', '-74.657018'],
- ['40.333379', '-74.657018'],
- ['40.346679', '-74.659941'],
- ['40.348433', '-74.66236'],
- ['40.348307', '-74.656521'],
- ['40.345334', '-74.652546'],
- ['40.340914', '-74.666387'],
- ['40.344305', '-74.658391'],
- ['40.340903', '-74.665119'],
- ['40.347788', '-74.656319'],
- ['40.34673', '-74.655259'],
- ['40.346412', '-74.655946'],
- ['40.350268', '-74.652827'],
- ['40.345701', '-74.652474'],
- ['40.349582', '-74.657495'],
- ['40.349582', '-74.657495'],
- ['40.349582', '-74.657495'],
- ['40.349582', '-74.657495'],
- ['40.349582', '-74.657495'],
- ['40.349582', '-74.657495'],
- ['40.34673', '-74.655259'],
- ['40.34624', '-74.6528'],
- ['40.34624', '-74.6528'],
- ['40.34624', '-74.6528'],
- ['40.347274', '-74.658045'],
- ['40.347239', '-74.655894'],
- ['40.349789', '-74.656103'],
- ['40.349194', '-74.653644'],
- ['40.351069', '-74.654141'],
- ['40.34365', '-74.657332'],
- ['40.347445', '-74.661497'],
- ['40.346367', '-74.657862'],
- ['40.34678', '-74.658659'],
- ['40.344653', '-74.658267'],
- ['40.346321', '-74.660941'],
- ['40.346014', '-74.655508'],
- ['40.345359', '-74.659666'],
- ['40.344386', '-74.654874'],
- ['40.344386', '-74.654874'],
- ['40.344653', '-74.659248'],
- ['40.34745173', '-74.66012844'],
- ['40.34570028', '-74.65758615'],
- ['40.344719', '-74.656574'],
- ['40.34673', '-74.655259'],
- ['40.34673', '-74.655259']];
+  var hi = [['40.34614', '-74.660091', '1901-Laughlin Hall'],
+ ['40.345863', '-74.656253', '1937 Hall'],
+ ['40.344532', '-74.655534', '1976 Hall'],
+ ['40.343418', '-74.655867', 'Bloomberg Hall'],
+ ['40.347546', '-74.654514', 'Campus Club'],
+ ['40.346659', '-74.653703', 'Center for Jewish Life'],
+ ['40.34714524', '-74.65927882', 'Edwards Hall'],
+ ['40.349123', '-74.651827', 'Fields Center'],
+ ['40.349582', '-74.657495', 'Firestone Library'],
+ ['40.342214', '-74.661144', 'Forbes Main'],
+ ['40.342214', '-74.661144', 'Forbes Main'],
+ ['40.350268', '-74.652827', 'Friend Center'],
+ ['40.350268', '-74.652827', 'Friend Center'],
+ ['40.34673', '-74.655259', 'Frist Campus Center'],
+ ['40.34673', '-74.655259', 'Frist Campus Center'],
+ ['40.34673', '-74.655259', 'Frist Campus Center'],
+ ['40.348599', '-74.661556', 'Holder Hall'],
+ ['40.348599', '-74.661556', 'Holder Hall'],
+ ['40.34491', '-74.656064', 'Wilcox Hall'],
+ ['40.343615', '-74.658358', 'Lauritzen Hall'],
+ ['40.333379', '-74.657018', 'Lawrence Apartments'],
+ ['40.333379', '-74.657018', 'Lawrence Apartments'],
+ ['40.346679', '-74.659941', 'Little Hall'],
+ ['40.348433', '-74.66236', 'Madison Hall'],
+ ['40.348307', '-74.656521', 'McCosh Hall'],
+ ['40.345334', '-74.652546', 'McDonnell Hall'],
+ ['40.340914', '-74.666387', 'New Graduate College'],
+ ['40.344305', '-74.658391', 'Wendell Hall C'],
+ ['40.340903', '-74.665119', 'Old Graduate College'],
+ ['40.347788', '-74.656319', 'Architecture Building'],
+ ['40.34673', '-74.655259', 'Frist Campus Center'],
+ ['40.346412', '-74.655946', 'Jones Hall'],
+ ['40.350268', '-74.652827', 'Friend Center'],
+ ['40.345701', '-74.652474', 'Fine Hall'],
+ ['40.349582', '-74.657495', 'Firestone Library'],
+ ['40.349582', '-74.657495', 'Firestone Library'],
+ ['40.349582', '-74.657495', 'Firestone Library'],
+ ['40.349582', '-74.657495', 'Firestone Library'],
+ ['40.349582', '-74.657495', 'Firestone Library'],
+ ['40.349582', '-74.657495', 'Firestone Library'],
+ ['40.34673', '-74.655259', 'Frist Campus Center'],
+ ['40.34624', '-74.6528', 'Lewis Library'],
+ ['40.34624', '-74.6528', 'Lewis Library'],
+ ['40.34624', '-74.6528', 'Lewis Library'],
+ ['40.347274', '-74.658045', 'McCormick Hall'],
+ ['40.347239', '-74.655894', 'Woolworth Center'],
+ ['40.349789', '-74.656103', 'Green Hall'],
+ ['40.349194', '-74.653644', 'Wallace Hall'],
+ ['40.351069', '-74.654141', '201 Nassau Street'],
+ ['40.34365', '-74.657332', '1981 Hall'],
+ ['40.347445', '-74.661497', 'Blair Hall'],
+ ['40.346367', '-74.657862', 'Brown Hall'],
+ ['40.34678', '-74.658659', 'Dod Hall'],
+ ['40.344653', '-74.658267', 'Fisher Hall Dorm'],
+ ['40.346321', '-74.660941', 'Foulke Hall'],
+ ['40.346014', '-74.655508', 'McCosh Health Center'],
+ ['40.345359', '-74.659666', 'Pyne Hall'],
+ ['40.344386', '-74.654874', 'Scully Hall'],
+ ['40.344386', '-74.654874', 'Scully Hall'],
+ ['40.344653', '-74.659248', 'Spelman Halls'],
+ ['40.34745173', '-74.66012844', 'Witherspoon Hall'],
+ ['40.34570028', '-74.65758615', 'Wright Hall'],
+ ['40.344719', '-74.656574', 'Wu Hall'],
+ ['40.34673', '-74.655259', 'Frist Campus Center'],
+ ['40.34673', '-74.655259', 'Frist Campus Center']];
 
  for (var i = 0; i < hi.length; i++) {
-  L.marker(hi[i]).bindPopup('This is a printer.').addTo(printers);
+  L.marker([hi[i][0], hi[i][1]]).bindPopup(hi[i][2]).addTo(printers);
  }
 
   // URLS of maps for different laters (note: need to add attributes)
