--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-    <script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/0D1798EF-4385-BB47-ADC0-6C6A29D33330/main.js" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="http://gc.kis.v2.scr.kaspersky-labs.com/03333D92A6C6-0CDA-74BB-5834-FE8971D0/abn/main.css"/><script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
     <!-- MAKES THE MAP FULLSCREEN -->
   <style>
@@ -147,7 +148,7 @@
   var map = L.map('map', {
     center: [40.346, -74.653],
     zoom: 16,
-    layers: [regular, printers]
+    layers: [regular]
   });
 
   // Our different layers "Watercolor": watercolor,
