--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
   //L.marker([40.347, -74.652]).bindPopup('This is Denver, CO.').addTo(printers),
   //L.marker([40.345, -74.654]).bindPopup('This is Aurora, CO.').addTo(printers),
   //L.marker([40.3475, -74.6526]).bindPopup('This is Golden, CO.').addTo(printers);
+
+var printerIcon = L.icon({
+       iconUrl: 'http://www.cs.princeton.edu/~yangsong/printer_icon.png',
+
+       iconSize:     [28, 28], // size of the icon
+       iconAnchor:   [14, 14], // point of the icon which will correspond to marker's location
+       popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
+     });
+
+var laundryIcon = L.icon({
+       iconUrl: 'http://www.cs.princeton.edu/~yangsong/washer.png',
+
+       iconSize:     [28, 28], // size of the icon
+       iconAnchor:   [14, 14], // point of the icon which will correspond to marker's location
+       popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
+     });
+
+var hotspotIcon = L.icon({
+       iconUrl: 'http://www.cs.princeton.edu/~yangsong/hotspot.png',
+
+       iconSize:     [28, 28], // size of the icon
+       iconAnchor:   [14, 14], // point of the icon which will correspond to marker's location
+       popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
+     });
+
   var hi = [['40.34614', '-74.660091', '1901 Hall - Ground Floor', '6'],
  ['40.345863', '-74.656253', '1937 Hall - Ground Floor', '6'],
  ['40.344532', '-74.655534', '1976 Hall - Room 33', '6'],
@@ -441,7 +466,7 @@ laund = [['40.344719', '-74.65694', '1915 Hall - Entry 6'],
  ['40.344255', '-74.656129', 'Yoseloff Hall - Room 005']];
  for (var i = 0; i < laund.length; i++) {
   //if (hi[i][3] == '6' || hi[i][3] == '29') 
-    L.marker([laund[i][0], laund[i][1]], {title: laund[i][2]}).bindPopup(laund[i][2]).addTo(laundry);
+    L.marker([laund[i][0], laund[i][1]], {title: laund[i][2], icon: laundryIcon}).bindPopup(laund[i][2]).addTo(laundry);
  }
  hot = [['40.35063', '-74.654932', '1st Floor (near elevator)'],
  ['40.342738', '-74.657116', 'Communication Center window'],
@@ -482,7 +507,7 @@ laund = [['40.344719', '-74.65694', '1915 Hall - Entry 6'],
  ['40.34570028', '-74.65758615', 'North wall, exterior']];
 for (var i = 0; i < hot.length; i++) {
   //if (hi[i][3] == '6' || hi[i][3] == '29') 
-    L.marker([hot[i][0], hot[i][1]], {title: hot[i][2]}).bindPopup(hot[i][2]).addTo(hotspots);
+    L.marker([hot[i][0], hot[i][1]], {title: hot[i][2], icon: hotspotIcon}).bindPopup(hot[i][2]).addTo(hotspots);
  }
  events = [['40.349577', '-74.652128', '2017 Art of Science Exhibition'],
  ['40.34673', '-74.655259', '2017 Art of Science Exhibition'],
@@ -616,9 +641,9 @@ for (var i = 0; i < events.length; i++) {
  }
  for (var i = 0; i < hi.length; i++) {
   //if (hi[i][3] == '6' || hi[i][3] == '29') 
-    if (hi[i][3] == '6') L.marker([hi[i][0], hi[i][1]]).bindPopup(hi[i][2]).addTo(printers);
-    if (hi[i][3] == '29') L.marker([hi[i][0], hi[i][1]]).bindPopup(hi[i][2]).addTo(printers);
-    if (hi[i][3] == '28') L.marker([hi[i][0], hi[i][1]]).bindPopup(hi[i][2]).addTo(copiers);
+    if (hi[i][3] == '6') L.marker([hi[i][0], hi[i][1]], {icon: printerIcon}).bindPopup(hi[i][2]).addTo(printers);
+    if (hi[i][3] == '29') L.marker([hi[i][0], hi[i][1]], {icon: printerIcon}).bindPopup(hi[i][2]).addTo(printers);
+    if (hi[i][3] == '28') L.marker([hi[i][0], hi[i][1]], {icon: printerIcon}).bindPopup(hi[i][2]).addTo(copiers);
  }
   // URLS of maps for different laters (note: need to add attributes)
   var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
